Updated the site, madeban about page.

--- a/about.html
+++ b/about.html
@@ -1,11 +1,38 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>This is aboout Oliver's chicken nuggets</title>
-  </head>
-  <body>
-    <p>Chicken nuggets are very good!</p>
+<html lang="en">
 
-  </body>
+<head>
+  <meta name="viewport" charset="utf-8">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="site.css">
+
+  <title>Carrot Home Page</title>
+</head>
+
+<body>
+  <div id="main-container">
+
+    <div id="title-bar">
+      <h1>About Carrot <span style="letter-spacing:-10px;">&#129365<span
+            style="font-size:15px;">&copy;</span></span> </h1>
+    </div>
+    <div id="navigationbar" class="navbar">
+      <a href="index.html"><i class="fa fa-fw fa-home"></i> Home</a>
+      <a href="#"><i class="fa fa-fw fa-search"></i> Search</a>
+      <a href="#"><i class="fa fa-fw fa-envelope"></i> Contact</a>
+      <a href="about.html"><i class="fa fa-fw fa-user"></i> About</a>
+    </div>
+    <div id="carrotimage">
+      <div id="column1" class="one-column ">
+          <h3>About us</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+            dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
+            ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
+            nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
+            anim id est laborum.</p>
+      </div>
+  
+    </div>
+</body>
+
 </html>
