--- a/about.html
+++ b/about.html
@@ -13,8 +13,8 @@
   <div id="main-container">
 
     <div id="title-bar">
-      <h1>About Carrot <span style="letter-spacing:-10px;">&#129365<span
-            style="font-size:15px;">&copy;</span></span> </h1>
+      <h1>About Carrot <span style="letter-spacing:-10px;">&#129365<span style="font-size:15px;">&copy;</span></span>
+      </h1>
     </div>
     <div id="navigationbar" class="navbar">
       <a href="index.html"><i class="fa fa-fw fa-home"></i> Home</a>
@@ -24,14 +24,14 @@
     </div>
     <div id="carrotimage">
       <div id="column1" class="one-column ">
-          <h3>About us</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-            dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
-            ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
-            nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
-            anim id est laborum.</p>
+        <h3>About us</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+          dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
+          ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
+          nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
+          anim id est laborum.</p>
       </div>
-  
+
     </div>
 </body>
 
