Finished off childpages

--- a/index.html
+++ b/index.html
@@ -24,12 +24,15 @@
     </div>
     <div id="carrotimage">
       <div id="column1" class="three-column">
-        <h3>who we are</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-          dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
-          ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
-          nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
-          anim id est laborum.</p>
+        <h3>Links to my Child Pages</h3>
+        <ul style="text-align: left;">
+          <li><a href="childpages/metatagexperiments.html">Meta tag experiments</a></li>
+          <li><a href="childpages/exph1-h6-p.html"> Headings and Paragraphs</a></li>
+          <li><a href="childpages/subsuper.html"> Subscript and superscript</a></li>
+          <li><a href="childpages/imageex.html"> Image examples</a></li>
+          <li><a href="childpages/layingoutdivsboilerplate.html"> Boilerplate</a></li>
+
+        </ul>
       </div>
       <div id="column2" class="three-column">
         <h3>What we do</h3>
@@ -48,7 +51,15 @@
           est laborum.</p>
       </div>
 
+
     </div>
+    <footer>
+      <blockquote cite="https://www.newyorker.com/culture/cultural-comment/kanye-wests-true-salvation-on-jesus-is-king">
+        Kanye west: "I am a God"
+      </blockquote>
+
+    </footer>
+  </div>
 </body>
 
 </html>
